--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
     <form action="/predict" method="POST">
         <section>
             <label>Enter length in miles</label>
-            <input class="len" name="len">
+            <input class="leng" name="leng">
         </section>
         <section>
             <label>Enter width in yards</label>
