--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,13 +18,19 @@
             <input class="fat" name="fat">
         </section>
         <section>
+            <label>Enter town, state (example: Wichita, Kansas)</label>
+            <input class="place" name="place">
+        </section>
+
+        <!-- Old portion for lat and long - kept for reference-->
+        <!-- <section>
             <label>Enter latitude</label>
             <input class="slat" name="slat">
         </section>
         <section>
             <label>Enter longitude</label>
             <input class="slon" name="slon">
-        </section>
+        </section> -->
 
         <input type="submit" value="Predict EF Category" class="button"/>
 
