--- a/Final_project/dashboard/backend/templates/results.html
+++ b/Final_project/dashboard/backend/templates/results.html
@@ -1,3 +1,3 @@
 <div>
-    <h1>Your Tornado000000090900000 EF Category Results: {{classify}}</h1>
+    <h1>Your Tornado EF Category Results: {{classify}}</h1>
 </div>
