--- a/Final_project/app/templates/results.html
+++ b/Final_project/app/templates/results.html
@@ -1,3 +1,3 @@
 <div>
-    <h1>Your Tornado EF Category Results: {{classify}}</h1>
+    <h1>Your Tornado EF Category Resultsrandon: {{classify}}</h1>
 </div>
