--- a/final_project/frontend/static/css/landing-style.css
+++ b/final_project/frontend/static/css/landing-style.css
@@ -10,23 +10,7 @@
     border-radius: 25px;
 }
 
-#video {
-    max-width: 100%;
-    height: auto;
-    border: 20px solid white;
-    margin-bottom: 25px;
-    border-radius: 25px;
-}
-
-#bar {
-    max-width: 100%;
-    height: auto;
-    border: 20px solid white;
-    margin-bottom: 25px;
-    border-radius: 25px;
-}
-
-#lines {
+.video {
     max-width: 100%;
     height: auto;
     border: 20px solid white;
@@ -73,7 +57,7 @@ body {
     font-weight: bold
 }
 
-.result {
+#result {
     font-size: 150%;
     font-weight: bold;
 }
